# Lets_Go_Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
obsolete/: get_single_chat_image.cpp
server/: CMakeLists.txt  Makefile  cmake_install.cmake  server
server/python/: send_email.py  send_sms.py
server/src/: lets_go_server_entry_point.cpp
server/src/globals/accepted_mine_types/: accepted_mime_types.h
server/src/globals/admin_privileges_vector/: admin_privileges_vector.h
server/src/globals/assert_macro/: assert_macro.h
server/src/globals/enums/: reason_picture_deleted.h  report_handled_move_reason.h  stored_type_enum.h
server/src/globals/file_IO_mutex_lock/: file_IO_mutex_lock.h
server/src/globals/get_environment_variable/: get_environment_variable.h
server/src/globals/global_bsoncxx_docs/: global_bsoncxx_doc.md  global_bsoncxx_docs.cpp  global_bsoncxx_docs.h
server/src/globals/global_constants/: algorithm_pipeline_field_names.h  android_specific_values.h  chat_change_stream_values.h  chat_room_values.h  chat_stream_container.h  collection_names.h  database_names.h  error_values.h  event_admin_values.h  feedback_values.h  general_values.h  grpc_values.h  matching_algorithm.h  mongodb_values.h  report_values.h  request_statistics_values.h  server_parameter_restrictions.h  testing_specific_values.h  version_number.h
server/src/globals/mongodb_connection_pool/: connection_pool_global_variable.h
server/src/globals/python_modules/: python_send_email_module.h  (+1 more)
server/test/: test_entry_point.cpp
server/test/testing_utility/: clear_database_for_testing.cpp  clear_database_for_testing.h
(+667 files in other folders)
